@@ -70,6 +70,14 @@ dialogs:
 	<TD>"Manage Favorites"</TD>
 </TR>
 <TR>
+	<TD><TT>new_directory_label</TT></TD>
+	<TD>"New Directory?"</TD>
+</TR>
+<TR>
+	<TD><TT>new_directory_tooltip</TT></TD>
+	<TD>"Create a new directory."</TD>
+</TR>
+<TR>
 	<TD><TT>preview_label</TT></TD>
 	<TD>"Preview"</TD>
 </TR>
